# tauriex

./: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
src/: app.css  app.html  app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/pty/: commands.rs  constants.rs  mod.rs
src/lib/component/: Command.svelte  XTerminal.svelte  Xterm.ts
src/routes/: +layout.svelte  +page.svelte  +page.svelte.org
