[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [ "global-shortcut-all", "window-set-title"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "sync", "time"] }

#portable-pty = { git = "https://github.com/wez/wezterm.git", features = ["serde_support"] }
portable-pty = { version = "0.8.1", features = ["serde_support"] }
phf = { version = "0.11.1", features = ["macros"] }
cuid2 = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
